sorting shift bug with selected filters fixed

--- a/frontend/src/Pages/Catalog/Catalog.scss
+++ b/frontend/src/Pages/Catalog/Catalog.scss
@@ -45,6 +45,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap: 16px;
     margin-top: 24px;
   }  
 }
